--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,9 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "apollo-upload-client": "^14.1.3",
     "color": "^3.1.3",
     "graphql": "^15.4.0",
     "react": "16.13.1",
