--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-animatable": "^1.3.3",
+    "react-native-dotenv": "^2.5.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-magnus": "^1.0.57",
     "react-native-modal": "^11.6.1",
